Bug 83162 - Option --notabbar interferes with --schema=<transparent schema>
Summary: Option --notabbar interferes with --schema=<transparent schema>
Status: RESOLVED FIXED
Alias: None
Product: konsole
Classification: Applications
Component: general (other bugs)
Version First Reported In: 1.3.2
Platform: unspecified Linux
: NOR normal
Target Milestone: ---
Assignee: Konsole Bugs
URL:
Keywords:
: 98570 (view as bug list)
Depends on:
Blocks:
 
Reported: 2004-06-10 18:24 UTC by Jorge Adriano
Modified: 2005-02-04 19:43 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Jorge Adriano 2004-06-10 18:24:43 UTC
Version:           1.3.2 (using KDE 3.2.3, SuSE)
Compiler:          gcc version 3.3 20030226 (prerelease) (SuSE Linux)
OS:                Linux (i686) release 2.4.20-4GB

To reproduce try:
konsole --notabbar --schema Transparent_lightbg

The schema won't be properly applied. 
Without --notabbar it works fine.
Comment 1 Kurt Hindenburg 2004-06-10 21:48:57 UTC
Yepper, same on CVS... 

konsole --notabbar --schema  Transparent_lightbg doesn't work (grayish bg color, no transparency). Moreover, it is not identical to running konsole without any arguments (white bg color, no trans).

Afterwards, changing the schema via the menu works.
Comment 2 Kurt Hindenburg 2004-07-14 20:17:36 UTC
In main.cpp, around line 545:
1. If --notabbar is given, m->show() does not "call" activateSession()
2. If --notabbar is NOT given, then activateSession is "called".

I tested this using kdDebug() statements...

Hack to fix this bug is to add
m->activateSession(0);
before the m->show() line in main.cpp.

However, as to the real reason for this... dunno.
Comment 3 Kurt Hindenburg 2004-07-14 20:19:28 UTC
Note also, that this bug is for transparent schemas ONLY!  
Comment 4 Kurt Hindenburg 2004-07-18 08:32:12 UTC
To reproduce, --schema=<transparent schema> must be on the command line.  Having it as the 'default' will not trigger this bug.
It doesn't matter if the notabbar is given on the command line or is the 'default'.
This below patch seems kinda hackish.  It fixes the bug, but it might be nice to know why...

Index: main.cpp
===================================================================
RCS file: /home/kde/kdebase/konsole/konsole/main.cpp,v
retrieving revision 1.267
diff -u -p -r1.267 main.cpp
--- main.cpp    10 Jul 2004 15:51:52 -0000      1.267
+++ main.cpp    18 Jul 2004 06:27:29 -0000
@@ -536,6 +536,7 @@ extern "C" int kdemain(int argc, char* a
       if (schema.right(7)!=".schema")
         schema+=".schema";
       m->setSchema(schema);
+      m->activateSession(0); // fixes BR83162
     }

     ksm->konsole = m;
Comment 5 Kurt Hindenburg 2005-01-03 06:16:54 UTC
CVS commit by hindenburg: 


Fix bug when --schema=<some transparent schema> and the tabbar is hidden.

BUG: 83162


  M +1 -0      main.cpp   1.277


--- kdebase/konsole/konsole/main.cpp  #1.276:1.277
@@ -557,4 +557,5 @@ extern "C" int KDE_EXPORT kdemain(int ar
         schema+=".schema";
       m->setSchema(schema);
+      m->activateSession(0); // Fixes BR83162, transp. schema + notabbar
     }
 


Comment 6 Kurt Hindenburg 2005-02-04 19:43:00 UTC
*** Bug 98570 has been marked as a duplicate of this bug. ***