Fix bug when --schema=<some transparent schema> and the tabbar is hidden.

BUG: 83162

svn path=/trunk/kdebase/konsole/; revision=375133